--- a/tsconfig.json
+++ b/tsconfig.json
@@ -46,6 +46,7 @@
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
     "types": [
+      "./declarations",
       "@types/jest",
       "@types/node"
     ],                           /* Type declaration files to be included in compilation. */
