--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "tslint -c tslint.json --project tsconfig.json",
     "prebuild": "npm run clean",
     "release": "semantic-release",
-    "test": "jest --config=jest.config.js --silent"
+    "test": "jest --config=jest.config.js --silent --coverage"
   },
   "repository": {
     "type": "git",
@@ -32,9 +32,11 @@
     "@semantic-release/npm": "5.1.15",
     "@semantic-release/release-notes-generator": "7.3.0",
     "@types/jest": "24.0.18",
-    "@types/node": "12.7.5",
+    "@types/node": "12.7.7",
     "github-api": "3.3.0",
     "jest": "24.9.0",
+    "jq-web": "0.5.0",
+    "js-yaml": "3.13.1",
     "prettier": "1.18.2",
     "rimraf": "3.0.0",
     "semantic-release": "15.13.24",
@@ -44,7 +46,10 @@
     "tslint": "5.20.0",
     "tslint-config-airbnb": "5.11.2",
     "typescript": "3.6.3",
-    "webpack": "4.40.2",
+    "webpack": "4.41.0",
     "webpack-cli": "3.3.9"
+  },
+  "dependencies": {
+    "@types/js-yaml": "3.12.1"
   }
 }
